set overflow:hidden; to showcase to stop horizontal scrow due to animation

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ code,pre{
     background-color: var(--primary-color);
     color: #fff;
     position:relative;
+    overflow: hidden;
 }
 .showcase h1{
     font-size:40px;
